cluster/apps/homepage/01-homepage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: homepage # Must match the folder's namespace created by the AppSet
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway # Matches whatever your local Gateway object is named
      namespace: kube-system   # Point this to wherever your central Gateway controller lives
  hostnames:
    - "homepage.dtxlan.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage-service
          port: 80
